--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="utf-8" />
     <title>React App</title>
   </head>
   <body>
+    <p>練習用です</p>
+    <h1>練習用です1</h1>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
