--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
   <body>
     <p>練習用です</p>
     <h1>練習用です1</h1>
+    <form>
+      <label>名前</label>
+      <input type="text">
+
+      <br>
+      <button>実行</button>
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
