--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
       <input type="text">
 
       <br>
+      <label>メールアドレス</label>
+      <input type="email">
+
+      <br>
       <button>実行</button>
     </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
