--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,24 @@
       <input type="email">
 
       <br>
+      <label>年齢</label>
+      <br>
+      <input type="radio"/>20代
+      <input type="radio"/>30代
+      <input type="radio"/>40代
+      <input type="radio"/>50代
+
+      <br>
+      <label>居住エリア</label>
+      <br>
+      <input type="checkbox"/>関東
+      <input type="checkbox"/>関西
+      <input type="checkbox"/>九州
+      <input type="checkbox"/>四国
+      <input type="checkbox"/>東北
+      <input type="checkbox"/>中部
+
+      <br>
       <button>実行</button>
     </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
