Maintain once to get started

--- a/public/index.html
+++ b/public/index.html
@@ -2,41 +2,10 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>CamP MeShI</title>
   </head>
   <body>
-    <p>練習用です</p>
-    <h1>練習用です1</h1>
-    <form>
-      <label>名前</label>
-      <input type="text">
-
-      <br>
-      <label>メールアドレス</label>
-      <input type="email">
-
-      <br>
-      <label>年齢</label>
-      <br>
-      <input type="radio"/>20代
-      <input type="radio"/>30代
-      <input type="radio"/>40代
-      <input type="radio"/>50代
-
-      <br>
-      <label>居住エリア</label>
-      <br>
-      <input type="checkbox"/>関東
-      <input type="checkbox"/>関西
-      <input type="checkbox"/>九州
-      <input type="checkbox"/>四国
-      <input type="checkbox"/>東北
-      <input type="checkbox"/>中部
-
-      <br>
-      <button>実行</button>
-    </form>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    
     <div id="root"></div>
    
   </body>
