--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>CamP MeshI</title>
   </head>
-  <body style="margin: 0% 20% 0% 20%;">
+  <body style="margin-left:20%;margin-right: 20%;">
     
     <div id="root"></div>
    
